<resources>
    <string name="app_name">COVID-19</string>
    <string name="trackedcountries">Quốc Gia</string>
    <string name="news">Tin Tức</string>
    <string name="countries">Quốc Gia Nhiễm Bệnh</string>
    <string name="todaydeaths">Tử Vong Trong Ngày</string>
    <string name="deaths">Tử Vong</string>
    <string name="todaycases">Số Ca Trong Ngày</string>
    <string name="activecases">Ca Nhiễm</string>
    <string name="criticalcases">Nguy Kịch</string>
    <string name="recoveredcases">Đã Khỏi</string>
    <string name="totalcases">Tổng Số Ca</string>
    <string name="globaldatas">số liệu toàn cầu</string>
    <string name="map_active">Đang Nhiễm Bệnh</string>
    <string name="map_deaths">Tử Vong</string>
    <string name="map_recovered">Đã Khỏi Bệnh</string>
    <string name="map_totalcases">Tổng Số Ca Bệnh</string>
    <string name="todo">TODO</string>
    <string name="address">Địa Chỉ</string>
    <string name="phone">Số Điện Thoại</string>
    <string name="name">Họ Tên</string>
    <string name="khaibaoyte">Khai Báo Y Tế</string>
    <string name="send">Khai Báo</string>
    <string name="walk">Lịch Trình Di Chuyển</string>
    <string name="trieuchung">Tình Trạng Sức Khỏe</string>
    <string name="noio">Địa chỉ liên lạc</string>
    <string name="sdt">Số điện thoại</string>
    <string name="ten">Họ Tên</string>
    <string name="noiden">Nơi Đến</string>
    <string name="noidi">Nơi Đi</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="ngaydi">Ngày Đi</string>
    <string name="ngayden">Ngày Đến</string>
    <string name="cccd">Căn Cước Công Dân</string>
    <string name="gioitinh">Giới Tính</string>
    <string name="inhoa">Viết In Hoa</string>
    <string name="view">Danh Sách</string>
    <string name="update">Cập Nhật</string>
    <string name="delete">Xóa</string>
    <string name="khaibaoyte1">Khai Báo Y Tế</string>
    <string name="dateofbirth">Ngày Sinh</string>
    <string name="search">Tìm Kiếm</string>
</resources>
