<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KhaiBaoYTe"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/img2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/khaibaoyte"
            android:textSize="36sp"
            android:layout_marginStart="60dp"
            android:textStyle="bold">
        </TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="110dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inhoa"
                android:inputType="textCapCharacters"
                tools:ignore="LabelFor"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:id="@+id/idname">
            </EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="100dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dateofbirth"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="text"
                tools:ignore="LabelFor"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:id="@+id/iddateofbirth">
            </EditText>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/gioitinh"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/idmale">
            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    tools:ignore="UselessParent"
                    >
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:text="@string/male"
                        >

                    </RadioButton>
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:width="0dp"
                        android:layout_weight="1"
                        android:text="@string/female">

                    </RadioButton>
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cccd"
                android:textStyle="bold"
                android:textSize="20sp"
                >
            </TextView>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:inputType="number"
                tools:ignore="LabelFor"
                android:id="@+id/idcccd"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textStyle="bold"
                android:textSize="20sp"
                >
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:inputType="phone"
                tools:ignore="LabelFor,TextFields"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:id="@+id/idphone">
            </EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:id="@+id/idaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/noio"
                android:inputType="textCapSentences"
                tools:ignore="LabelFor,TextFields"
                android:layout_marginTop="20dp"
                android:autofillHints="">
            </EditText>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noidi"
                    android:textStyle="bold"
                    android:textSize="20sp">
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="LabelFor"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:id="@+id/idfrom">
                </EditText>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ngaydi"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    >
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:id="@+id/idstartday"
                    >
                </EditText>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/noiden"
                    android:textStyle="bold"
                    android:textSize="20sp">
                </TextView>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    tools:ignore="LabelFor"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:id="@+id/idcomein" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ngayden"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    >
                </TextView>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:id="@+id/idendday"
                    >
                </EditText>

            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/walk"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Di Chuyển"
                android:inputType="text"
                tools:ignore="LabelFor"
                android:layout_marginTop="20dp"
                android:id="@+id/idaway">
            </EditText>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trieuchung"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="LabelFor"
                android:layout_marginTop="20dp"
                android:id="@+id/idhealths"
                >
            </EditText>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            >
            <Button
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/send"
                android:id="@+id/idinsert"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:background="@color/color_one"
                tools:ignore="ButtonStyle,Suspicious0dp">
            </Button>
            <Button
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/update"
                android:id="@+id/idupdate"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:background="@color/color_one"
                tools:ignore="ButtonStyle,Suspicious0dp">

            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"

            >
            <Button
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/delete"
                android:id="@+id/iddelete"
                android:textSize="16sp"
                android:background="@color/color_one"
                tools:ignore="ButtonStyle,Suspicious0dp">
            </Button>
            <Button
                android:layout_weight="1"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:text="@string/view"
                android:id="@+id/idview"
                android:textSize="16sp"
                android:layout_marginStart="10dp"
                android:background="@color/color_one"
                tools:ignore="ButtonStyle,Suspicious0dp">

            </Button>
        </LinearLayout>

    </LinearLayout>
</ScrollView>