<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/countriesname"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvCountry"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/todaycases"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvCases"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_recovered"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvRecovered"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/map_active"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvActive"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/deaths"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvDeaths"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/todaycases"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvTodayCases"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/todaydeaths"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvTodayDeaths"
            android:textAlignment="textEnd"
            android:textSize="18sp"

            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/criticalcases"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/tvCritical"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textColor="@color/color_one"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_two"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>